--- a/src/app/gifs/card-list/card-list/card-list.component.html
+++ b/src/app/gifs/card-list/card-list/card-list.component.html
@@ -1,6 +1,17 @@
-<ul>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-</ul>                                            
+<div class="row">
+
+    <div class="col-md-3 col-sm-6">
+
+        <div class="card mb-2 text-center  bg-dark ">
+            <!--TODO Crear Imagen-->
+
+            <div class="card-body text-white ">
+                <p class="card-text">
+                    Hola de nuevo
+                </p>
+            </div>
+
+        </div>
+    </div>
+
+</div>
