--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,8 +1,15 @@
 <div class="bg-dark border-right p-3" id="sidebar" >
     <h3 class="text-light">GifsApp</h3>
     <hr class="text-white">
-    <div class="list-group">
-        <button class="list-group-item list-group-item-action">GPT</button>
+
+    <div #tag class="list-group">
+        <button 
+        (click)="onClick($event)"
+        *ngFor="let tag of serviceGifs.tagHistory"
+        class="list-group-item list-group-item-action">
+        {{tag| titlecase }}
+        </button>
     </div>
+
 
 </div>
